# patina-dxe-core-qemu

./: .gitmodules  .markdownlint.yaml  Cargo.toml  Makefile.toml  README.md  b.sh  cspell.yml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: release-draft-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_request.yml  feature_request.yml
.github/workflows/: CiWorkflow.yml  binary-size-check-pr.yml  binary-size-check.yml  binary-size-report.yml  ci-workflow.yml  label-issues.yml  label-sync.yml  patina-qemu-pr-validation-pending.yml  patina-qemu-pr-validation-post.yml  patina-qemu-pr-validation.yml  publish-binaries.yml  triage-issues.yml  update-release-draft.yml
.github/workflows/label-issues/: file-paths.yml  regex-pull-requests.yml
docs/images/: Size_Comparison.csv
patina_dxe_core-8.3.0/src/allocator/: uefi_allocator.rs
src/: armvirt.rs  lib.rs  main.rs  q35.rs  uart_debug.rs
src/armvirt/: component.rs
src/armvirt/component/: service.rs
src/armvirt/component/service/: smbios_platform.rs  smbios_test.rs
src/q35/: component.rs  registers.rs  timer.rs
src/q35/component/: service.rs
src/q35/component/service/: mm_config_provider.rs  mm_control.rs  mm_test.rs  smbios_example.rs  smbios_platform.rs  smbios_publisher.rs  smbios_test.rs
src/sbsa/component/service/: smbios_platform.rs
