[package]
name = "qemu_dxe_core"
version = "3.0.3"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[[bin]]
name = "qemu_ovmf_dxe_core"
path = "bin/ovmf_dxe_core.rs"
required-features = ["x64"]

[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_info",
] }
patina_acpi = { version = "21" }
patina_adv_logger = { version = "21" }
patina_debugger = { version = "21" }
patina_dxe_core = { version = "21" }
patina_mm = { version = "21" }
patina_performance = { version = "21" }
patina_samples = { version = "21" }
patina_smbios = { version = "21" }
patina_test = { version = "21", features = ["test-runner"] }
patina = { version = "21" }
patina_ffs_extractors = { version = "21" }
patina_stacktrace = { version = "21" }
r-efi = { version = "^5", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false, features = [
  "instructions"
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
qemu-exit = { version = "3", optional = true }

[features]
# Keep the default features here in sync with the features listed in BASE_FEATURES in Makefile.toml
default = ["compatibility_mode_allowed", "exit_on_patina_test_failure"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
v1_resource_descriptor_support = ["patina_dxe_core/v1_resource_descriptor_support"]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = ["patina_dxe_core/debugger_reload"]
enable_debugger = ["build_debugger"]
exit_on_patina_test_failure = ["qemu-exit"]
