[package]
name = "qemu_dxe_core"
version = "3.0.7"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[[bin]]
name = "qemu_ovmf_dxe_core"
path = "bin/ovmf_dxe_core.rs"
required-features = ["x64"]

[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_info",
] }

patina_acpi = { path="E:/repos/patina/components/patina_acpi" }
patina_test = { path="E:/repos/patina/components/patina_test", features = ["test-runner"] }
patina_mm = { path="E:/repos/patina/components/patina_mm" }
patina_samples = { path="E:/repos/patina/components/patina_samples" }
patina_smbios = { path="E:/repos/patina/components/patina_smbios"}
patina = { path="E:/repos/patina/sdk/patina" }
patina_adv_logger = { path="E:/repos/patina/components/patina_adv_logger" }
patina_dxe_core = { path="E:/repos/patina/patina_dxe_core" }
patina_performance = { path="E:/repos/patina/components/patina_performance" }
patina_ffs_extractors = { path="E:/repos/patina/sdk/patina_ffs_extractors" }
patina_stacktrace = { path="E:/repos/patina/core/patina_stacktrace" }
patina_debugger = { path="E:/repos/patina/core/patina_debugger" }

r-efi = { version = "^6", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false, features = [
  "instructions"
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
qemu-exit = { version = "3", optional = true }

[features]
ci_features = ['build_debugger', 'compatibility_mode_allowed', 'enable_debugger', 'exit_on_patina_test_failure', 'v1_resource_descriptor_support']
# Keep the default features here in sync with the features listed in BASE_FEATURES in Makefile.toml
default = ["compatibility_mode_allowed", "exit_on_patina_test_failure"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
v1_resource_descriptor_support = ["patina_dxe_core/v1_resource_descriptor_support"]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = ["patina_dxe_core/debugger_reload"]
enable_debugger = ["build_debugger"]
exit_on_patina_test_failure = ["qemu-exit"]
