[package]
name = "qemu_dxe_core"
version = "3.0.10"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_ovmf_dxe_core"
path = "bin/ovmf_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_armvirt_dxe_core"
path = "bin/arm_virt_dxe_core.rs"
required-features = ["aarch64"]

[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]

# Patina dependencies
patina = { version = "22" }
patina_acpi = { version = "22" }
patina_adv_logger = { version = "22" }
patina_debugger = { version = "22" }
patina_dxe_core = { version = "22" }
patina_ffs_extractors = { version = "22" }
patina_mm = { version = "22" }
patina_performance = { version = "22" }
patina_samples = { version = "22" }
patina_smbios = { version = "22" }
patina_stacktrace = { version = "22" }
patina_test = { version = "22", features = ["test-runner"] }

# Other dependencies
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_info",
] }
qemu-exit = { version = "4", optional = true }
r-efi = { version = "^6", default-features = false }
x86_64 = { version = "=0.15.4", default-features = false, features = [
  "instructions",
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[features]
ci_features = [
  'build_debugger',
  'compatibility_mode_allowed',
  'enable_debugger',
  'exit_on_patina_test_failure',
  'v1_resource_descriptor_support',
]
# Keep the default features here in sync with the features listed in BASE_FEATURES in Makefile.toml
default = ["compatibility_mode_allowed", "exit_on_patina_test_failure"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
v1_resource_descriptor_support = [
  "patina_dxe_core/v1_resource_descriptor_support",
]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = ["patina_dxe_core/debugger_reload"]
enable_debugger = ["build_debugger"]
exit_on_patina_test_failure = ["qemu-exit"]
